이메일 중복 확인 기능 추가 (응답 처리 X)

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -25,12 +25,14 @@
             android:hint="이메일 양식만 지원됩니다."
             android:inputType="textEmailAddress"/>
         <Button
+            android:id="@+id/emailCheckBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="중복 확인"/>
 
     </LinearLayout>
     <TextView
+        android:id="@+id/checkResultTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="중복 확인을 해주세요."/>
