--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,6 +35,12 @@
         android:inputType="textPassword"
         android:singleLine="true"/>
 
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:text="자동 로그인"/>
+
     <Button
         android:id="@+id/signInBtn"
         android:layout_width="match_parent"
