참여중인 사용자 명단

--- a/app/src/main/res/layout/activity_view_project_detail.xml
+++ b/app/src/main/res/layout/activity_view_project_detail.xml
@@ -116,6 +116,12 @@
                     android:text="나도 도전하기!" />
 
                 <Button
+                    android:id="@+id/viewUsersBtn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="참여 중인 사람 명단 확인" />
+
+                <Button
                     android:id="@+id/giveUpBtn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
