--- a/app/src/main/res/layout/my_custom_action_bar.xml
+++ b/app/src/main/res/layout/my_custom_action_bar.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:layout_width="100dp"
         android:layout_height="30dp"
-        android:src="@drawable/actionbar_logo"
+        android:src="@drawable/image"
         android:layout_gravity="center"/>
 
 
