--- a/app/src/main/res/layout/my_custom_action_bar.xml
+++ b/app/src/main/res/layout/my_custom_action_bar.xml
@@ -12,6 +12,12 @@
         android:src="@drawable/image"
         android:layout_gravity="center"/>
 
-
+    <ImageView
+        android:id="@+id/backBtn"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/back"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="5dp"/>
 
 </FrameLayout>
