--- a/app/src/main/res/layout/user_list_item.xml
+++ b/app/src/main/res/layout/user_list_item.xml
@@ -22,12 +22,28 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:orientation="vertical">
-            <TextView
-                android:id="@+id/nickNameTxt"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:text="닉네임 자리"/>
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/nickNameTxt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:text="닉네임 자리"/>
+
+                <TextView
+                    android:id="@+id/signUpDateTxt"
+                    android:layout_marginLeft="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="(가입일자 : 2000년 10월 10일)"/>
+
+
+            </LinearLayout>
+
             <TextView
                 android:id="@+id/emailTxt"
                 android:layout_width="wrap_content"
