빨간 테두리 사각형 drawable에 xml 추가해서 작성

--- a/app/src/main/res/layout/my_custom_action_bar.xml
+++ b/app/src/main/res/layout/my_custom_action_bar.xml
@@ -20,4 +20,11 @@
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="5dp"/>
 
+    <ImageView
+        android:layout_marginLeft="170dp"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:src="@drawable/bell"
+        android:layout_gravity="center"/>
+
 </FrameLayout>
