--- a/app/src/main/res/drawable/red_border_box.xml
+++ b/app/src/main/res/drawable/red_border_box.xml
@@ -25,4 +25,28 @@
             </item>
         </layer-list>
     </item>
+
+    <item
+        android:state_pressed="true">
+        <layer-list>
+            <item>
+                <shape
+                    android:shape="rectangle">
+                    <solid
+                        android:color="#FF0000"/>
+                </shape>
+            </item>
+            <item
+                android:left="2dp"
+                android:top="2dp"
+                android:bottom="2dp"
+                android:right="2dp">
+                <shape
+                    android:shape="rectangle">
+                    <solid
+                        android:color="#DFDFDF"/>
+                </shape>
+            </item>
+        </layer-list>
+    </item>
 </selector>
